2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* ext/ogg/gstoggdemux.c:
	  Revert the event part, that should not go in.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* ext/ogg/gstoggdemux.c:
	  Don't leak GstPluginFeatures when filtering.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/xvimagesink.c:
	  Add some logging for cases when grabbing the xv failed.

2008-04-21  David Schleef  <ds@schleef.org>

	* ext/ogg/gstoggmux.c:
	  Update Ogg/Dirac muxing.  Removes the weird "KW-DIRAC" bos
	  packet.  Should conform to what we currently think is the
	  final Ogg/Dirac muxing spec.

2008-04-21  David Schleef  <ds@schleef.org>

	* sys/xvimage/xvimagesink.c:
	  Fix typo that causes the overlay keying color to bright green
	  on a 16-bit display.  Dark grey good.  Bright green bad.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* ext/gnomevfs/gstgnomevfsuri.c:
	  Add  FIXME comment about using uri-list for source and sink.

2008-04-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ogg/gstogmparse.c: (gst_ogm_parse_stream_header):
	GST_TYPE_FRACTION contains gints so correctly cast gint64 arguments to
	vaargs functions to gint. Otherwise the fractions will get 0 set
	instead of the correct value on big endian systems. Fixes bug #529018.

2008-04-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gnomevfs/gstgnomevfssink.c:
	(gst_gnome_vfs_sink_uri_get_protocols):
	* ext/gnomevfs/gstgnomevfssrc.c:
	(gst_gnome_vfs_src_uri_get_protocols):
	* ext/gnomevfs/gstgnomevfsuri.c: (_internal_get_supported_uris),
	(gst_gnomevfs_get_supported_uris):
	Get the list of supported URI schemes in a threadsafe way and use the
	same list for the source and sink.

2008-04-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgio.c: (_internal_get_supported_protocols),
	(gst_gio_get_supported_protocols):
	Don't generate a new supported protocols list on each call but cache
	it. It's supposed to be static anyway, this way we only leak it once